# dummy-bot-control

./: .gitignore  Cargo.toml  README.md
.cargo/: config
docs/: quad_move_fn.ggb  step.drawio  step_update_process1.ggb
src/: main.rs
src/math/: circle.rs  matrix2.rs  matrix3.rs  mod.rs  point.rs  quaternion.rs  transform.rs  vector2.rs  vector3.rs  vectors.rs
src/robot/: functions.rs  hexapod.rs  leg.rs  mod.rs  move_sequence.rs  sequence.rs  sequence_fn.rs  stop_sequence.rs  stop_sequence_fn.rs  walk_sequence.rs  walk_sequence_fn.rs
